--- a/Google.Host/Views/Search/KeywordNotFound.cshtml
+++ b/Google.Host/Views/Search/KeywordNotFound.cshtml
@@ -1,3 +1,7 @@
-﻿<div id="body">
-    <h2>Keyword not found</h2>
+﻿@model Google.SearchEngine.Model.SearchRequest
+
+<div id="body">
+    <div class="alert alert-danger">
+        Keyword not found
+    </div>
 </div>
