--- a/Google.Host/Views/Search/SearchResults.cshtml
+++ b/Google.Host/Views/Search/SearchResults.cshtml
@@ -1,12 +1,12 @@
 ﻿@model Google.SearchEngine.Model.WebKeyword
 
 <div id="body">
-    <section class="content-wrapper main-content clear-fix">
+    @*<section class="content-wrapper main-content clear-fix">
         <div class="col-md-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">Search Results: <b>@Model.Word</b></div>
                 <div class="panel-body">
-                    <div>
+                    <div>*@
                         <table class="table">
                             <thead>
                                 <tr>
@@ -24,9 +24,9 @@
                                 </tr>
                             }
                         </table>
-                    </div>
+                    @*</div>
                 </div>
             </div>
         </div>
-    </section>
+    </section>*@
 </div>
