--- a/Google.Host/Views/Statistics/Index.cshtml
+++ b/Google.Host/Views/Statistics/Index.cshtml
@@ -1,6 +1,10 @@
 ﻿<div id="body">
     <section class="content-wrapper main-content clear-fix">
-        <div class="text-center"><h4>Web Page Statistics</h4></div>
+        <span class="row">
+            @Html.Partial("~/Views/Statistics/_Summary.cshtml")
+        </span>
+        @Html.Partial("~/Views/Statistics/_MostSearches.cshtml")
+        @Html.Partial("~/Views/Statistics/_RecentSearches.cshtml")
         @Html.Partial("~/Views/Statistics/_Keywords.cshtml")
         @Html.Partial("~/Views/Statistics/_IndexedPages.cshtml")
         @Html.Partial("~/Views/Statistics/_IgnoredWords.cshtml")
