--- a/Google.Host/Views/Statistics/_IgnoredWords.cshtml
+++ b/Google.Host/Views/Statistics/_IgnoredWords.cshtml
@@ -3,7 +3,7 @@
 
 @{var ignoredWords = ((StatisticsController)this.ViewContext.Controller).Indexer.IgnoredWords; }
 <div class="col-md-4">
-    <div class="panel panel-primary">
+    <div class="panel panel-default">
         <div class="panel-heading">Ignored Words</div>
         <div class="panel-body">
             <div>
