--- a/Google.Host/Views/Index/IndexResults.cshtml
+++ b/Google.Host/Views/Index/IndexResults.cshtml
@@ -2,15 +2,15 @@
 
 <div id="body">
     <section class="content-wrapper main-content clear-fix">
-        <div class="col-sm-12 text-center">
+        <div class="col-md-12 text-center">
             <h4>Index Results</h4>
-            <div class="col-md-6">
+            <div class="col-md-12 text-left">
                 <div class="panel panel-primary">
                     <div class="panel-heading">Index Results</div>
                     <div class="panel-body">
                         <div>
                             @Html.LabelFor(model => model.Url):
-                            <a href="@Html.DisplayFor(model => model.Url)">@Html.DisplayFor(model => model.Url)</a><br/>
+                            <a href="@Html.DisplayFor(model => model.Url)">@Html.DisplayFor(model => model.Url)</a><br />
                             @Html.LabelFor(model => model.Title):
                             @Html.DisplayFor(model => model.Title)<br />
                             @Html.LabelFor(model => model.IndexDate):
