--- a/Google.Host/Views/Search/Index.cshtml
+++ b/Google.Host/Views/Search/Index.cshtml
@@ -1,14 +1,14 @@
 ﻿@model Google.SearchEngine.Model.SearchRequest
 
-<div id="body">
+<div id="body" class="container">
     <section class="content-wrapper main-content clear-fix">
         <div class="col-md-12 text-center">
-            <h4>Search</h4>
+            <img src="~/Images/googlelogo.png" alt="Google"/>
             @using (Html.BeginForm())
             {
                 @Html.AntiForgeryToken()
                 <div class="row" style="margin: 10px">
-                    <b>@Html.TextBoxFor(model => model.RequestValue)</b>
+                    <b>@Html.TextBoxFor(model => model.RequestValue, new { @class="input" })</b>
                 </div>
                 <div class="row">
                     <div class="row">
